--- a/hatch.toml
+++ b/hatch.toml
@@ -7,9 +7,25 @@ source = "vcs"
 
 [metadata.hooks.fancy-pypi-readme]
 content-type = "text/markdown"
+fragments = [
+    { path = "README.md" },
+]
 
-[[metadata.hooks.fancy-pypi-readme.fragments]]
-path = "README.md"
+[[metadata.hooks.fancy-pypi-readme.substitutions]]
+pattern = "\\[INSTALL.md\\]\\((?!https?://)\\S+?\\)"
+replacement = "[INSTALL.md](https://github.com/RomainBrault/toto/blob/main/INSTALL.md)"
+
+[[metadata.hooks.fancy-pypi-readme.substitutions]]
+pattern = "\\[CONTRIBUTING.md\\]\\((?!https?://)\\S+?\\)"
+replacement = "[CONTRIBUTING.md](https://github.com/RomainBrault/toto/blob/main/CONTRIBUTING.md)"
+
+[[metadata.hooks.fancy-pypi-readme.substitutions]]
+pattern = "\\[MAINTAINERS.md\\]\\((?!https?://)\\S+?\\)"
+replacement = "[MAINTAINERS.md](https://github.com/RomainBrault/toto/blob/main/MAINTAINERS.md)"
+
+[[metadata.hooks.fancy-pypi-readme.substitutions]]
+pattern = "\\]\\(docs/_static/banner.svg\\)\""
+replacement = "](https://raw.githubusercontent.com/RomainBrault/toto/refs/heads/main/docs/_static/banner.svg)"
 
 [build.targets.sdist]
 only-include = [
